# personal-cli

./: .gitignore  AGENTS.md  README.md  SKILL.md  articles.json  projects.json  pyproject.toml
.github/workflows/: publish.yml
articles/: how-i-built-x-in-2-days.md  why-less-code-wins.md
skills/: SKILL.md  write-article.md
src/personal_cli/: __init__.py  __main__.py  cli.py  client.py  formatting.py
tests/: conftest.py  test_cli.py  test_client.py
